--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,10 @@ jobs:
         docker build -t zasulanb/my-first-site .
         docker push zasulanb/my-first-site
 
-    - name: Set up Kubernetes kubeconfig
+    - name: Set up kubeconfig
       run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+        echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
+        chmod 600 ~/.kube/config
 
     - name: Deploy to Kubernetes
       run: |
