--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,12 @@ jobs:
         docker build -t zasulanb/my-first-site .
         docker push zasulanb/my-first-site
 
+    - name: Create .kube directory
+      run: mkdir -p ~/.kube
+
+    - name: Add kubeconfig
+      run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+      
     - name: Set up kubeconfig
       run: |
         echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
