--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,16 +35,28 @@ jobs:
         docker build -t zasulanb/my-first-site .
         docker push zasulanb/my-first-site
 
-    - name: Create .kube directory
+    # - name: Test kubectl connection
+    #   run: kubectl cluster-info
+      
+    # - name: Create .kube directory
+    #   run: mkdir -p ~/.kube
+
+    # - name: Add kubeconfig
+    #   run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+      
+    # - name: Set up kubeconfig
+    #   run: |
+    #     echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
+    #     chmod 600 ~/.kube/config
+
+    - name: Create kubeconfig directory
       run: mkdir -p ~/.kube
 
-    - name: Add kubeconfig
+    - name: Set kubeconfig
       run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-      
-    - name: Set up kubeconfig
-      run: |
-        echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
-        chmod 600 ~/.kube/config
+
+    - name: Apply Kubernetes manifest
+      run: kubectl apply -f deployment.yaml
 
     - name: Deploy to Kubernetes
       run: |
