--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD for Kubernetes
 on:
   push:
     branches:
-      - main   # Слушаем изменения в ветке main, можно заменить на вашу рабочую ветку
+      - main
 
 jobs:
   build-and-deploy:
@@ -32,39 +32,19 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t zasulanb/my-first-site .
-        docker push zasulanb/my-first-site
+        docker build -t zasulanb/my-first-site:${{ github.sha }} .
+        docker push zasulanb/my-first-site:${{ github.sha }}
 
-    # - name: Test kubectl connection
-    #   run: kubectl cluster-info
-      
-    # - name: Create .kube directory
-    #   run: mkdir -p ~/.kube
+    - name: Install doctl
+      uses: digitalocean/action-doctl@v2
+      with:
+        token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
-    # - name: Add kubeconfig
-    #   run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-      
-    # - name: Set up kubeconfig
-    #   run: |
-    #     echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
-    #     chmod 600 ~/.kube/config
-
-    - name: Create kubeconfig directory
-      run: mkdir -p ~/.kube
-
-    - name: Set kubeconfig
-      run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-
-    - name: Apply Kubernetes manifest
-      run: kubectl apply -f deployment.yaml
-
-    - name: Debug kubeconfig
-      run: cat ~/.kube/config
-
-    # - name: Test kubectl connection
-    #     run: kubectl cluster-info
-
-    - name: Deploy to Kubernetes
+    - name: Save DigitalOcean kubeconfig
       run: |
-        kubectl apply -f deployment.yaml
-        kubectl rollout restart deployment hello-world-deployment
+        doctl kubernetes cluster kubeconfig save do-sfo3-k8s-1-31-1-do-4-sfo3-1731846316192
+
+    - name: Update deployment image
+      run: |
+        kubectl set image deployment/hello-world hello-world=zasulanb/my-first-site:${{ github.sha }}
+        kubectl rollout status deployment/hello-world
