--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world
+  labels:
+    app: hello-world
 spec:
   replicas: 1
   selector:
@@ -17,3 +19,4 @@ spec:
         image: zasulanb/my-first-site:latest
         ports:
         - containerPort: 80
+        imagePullPolicy: Always
